test/files/neg/spore-test-neg2.check
spore-test-neg2.scala:11: error: Incorrect usage of `spore`: function literal expected
    f
    ^
one error found
